@@ -11,6 +11,7 @@ drlm (2.2.1) stable release; urgency=high
   * Modnetwork server ip now modify client.cfg files (issue #77).  
   * In modnetwork if netmask is not specified is taken database saved netmask.
   * In addnetwork if network IP is not specified will be calculated (issue #84).
+  * Problem with PXE folder file parsing fixed (issue #86).
 
 -- Pau Roura <pau@brainupdaters.net>  Wed, 13 Jun 2018 00:00:00 +0100
 
